@@ -1,5 +1,6 @@
 ART 3.7
 * Added google cloud storage destination type
+* Fix for pivottable.js renderers localization not working
 * Updated jclouds, pivottable.js
 
 ART 3.6
